Fixed a resizing issue
Images would become squished. Removed a min-height attribute on images.

--- a/css/poole.css
+++ b/css/poole.css
@@ -458,7 +458,9 @@ a.pagination-item:hover {
 }
 
 .home-image {
-	min-height:50px;
+	display:block;
+	width:auto;
+	height:auto;
 	max-height:75px;
 	margin-left:auto;
 	margin-right:auto;
